--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "^0.7.0"
   },
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --coverage  --verbose",
     "lint": "eslint '**/*.js'" 
   },
   "repository": {
